[package]
name = "ip-api4rs"
version = "1.0.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "A Rust library for the ip-api.com API."
license = "Apache-2.0"
repository = "https://github.com/DenuxPlays/ip-api4rs"
homepage = "https://github.com/DenuxPlays/ip-api4rs"
documentation = "https://docs.rs/ip-api4rs"
readme = "README.md"
edition = "2021"
rust-version = "1.73.0"

[features]
blocking = ["dep:tokio"]

[dev-dependencies]
# Async runtime
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies]
#Async runtime
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"], optional = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Ratelimiting
governor = "0.6.0"
nonzero_ext = { version = "0.3.0", default-features = false }

# Serialization and deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.2.0"

# Error handling
thiserror = "1"
