[package]
name = "ip-api4rs"
version = "3.0.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "A Rust library for the ip-api.com API."
license = "Apache-2.0"
repository = "https://github.com/DenuxPlays/ip-api4rs"
homepage = "https://github.com/DenuxPlays/ip-api4rs"
documentation = "https://docs.rs/ip-api4rs"
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[features]
blocking = ["reqwest/blocking"]

[dev-dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"], default-features = false }

# Ratelimiting
governor = "0.9"
nonzero_ext = { version = "0.3", default-features = false }

# Serialization and deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"

# Error handling
thiserror = "2"
